--- a/TestCursorPlugin/manifest.json
+++ b/TestCursorPlugin/manifest.json
@@ -1,25 +1,20 @@
 {
+  "manifestVersion": 5,
   "id": "com.saveonpeptides.autoreplace",
   "name": "SaveOnPeptides Auto Replace Tool",
   "version": "1.0.0",
   "main": "index.html",
   "host": {
     "app": "PS",
-    "minVersion": "22.0.0"
-  },
-  "manifestVersion": 4,
-  "apiVersion": 2,
-  "requiredPermissions": {
-    "allowCodeGenerationFromStrings": true,
-    "filesystem": { "read": true, "write": true },
-    "launchProcess": true,
-    "network": true
+    "minVersion": "23.3.0"
   },
   "entrypoints": [
     {
       "type": "panel",
       "id": "mainPanel",
-      "label": "SaveOnPeptides Auto Replace",
+      "label": {
+        "default": "SaveOnPeptides Auto Replace"
+      },
       "minimumSize": {"width": 300, "height": 400},
       "maximumSize": {"width": 2000, "height": 2000},
       "preferredDockedSize": {"width": 300, "height": 400},
@@ -29,6 +24,20 @@
       ]
     }
   ],
+  "icons": [
+    {"width": 23, "height": 23, "path": "icons/icon.png", "scale": [1, 2], "theme": ["darkest", "dark", "medium", "light", "lightest"]}
+  ],
+  "requiredPermissions": {
+    "allowCodeGenerationFromStrings": true,
+    "localFileSystem": "request",
+    "launchProcess": {
+      "schemes": ["https"],
+      "extensions": [".png", ".jpg", ".jpeg", ".psd"]
+    },
+    "network": {
+      "domains": ["*"]
+    }
+  },
   "files": [
     "index.html",
     "index.js",
